--- a/templates/form.html
+++ b/templates/form.html
@@ -19,22 +19,6 @@
         </select>
       </div>
 
-      <!-- Lease no -->
-      <div class="col-md-4">
-        <label class="form-label">Lease no</label>
-        <select name="loc_fed_lease_no" class="form-select">
-          {% for l in lease_nos %}<option>{{l}}</option>{% endfor %}
-        </select>
-      </div>
-
-      <!-- Field name -->
-      <div class="col-md-4">
-        <label class="form-label">Field name</label>
-        <select name="field_name" class="form-select">
-          {% for f in field_names %}<option>{{f}}</option>{% endfor %}
-        </select>
-      </div>
-
       <!-- Eventos -->
       <div class="col-md-4">
         <label class="form-label">Eventos Normalizados</label>
@@ -43,13 +27,13 @@
         </select>
       </div>
 
-      <!-- Pozo -->
+      <!-- Pozo con datalist / autocomplete -->
       <div class="col-md-4">
         <label class="form-label">Pozo</label>
         <input id="pozo" name="POZO" class="form-control" list="pozo-list" placeholder="Empieza a escribir...">
         <datalist id="pozo-list">
           {% for p in pozos %}
-            <option value="{{ p }}"></option>
+          <option value="{{ p }}"></option>
           {% endfor %}
         </datalist>
       </div>
@@ -72,10 +56,9 @@
         </select>
       </div>
 
-      <!-- Aquí inyectamos N campos de cantidad -->
+      <!-- Inputs dinámicos de cantidad -->
       <div id="cantidades" class="col-md-6">
         <label class="form-label">Pickup weight por maniobra (solo Dataset 2)</label>
-        <!-- dinámicamente se crearán FloatInputs aquí -->
       </div>
 
       <div class="col-12">
@@ -84,13 +67,11 @@
     </form>
   </div>
 
-  <!-- Exponemos la lista de maniobras del dataset2 para el JS -->
-  <script>
-    const maniobrasDataset2 = {{ maniobras_2|tojson }};
-  </script>
+  <script>const maniobrasDataset2 = {{ maniobras_2|tojson }};</script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="{{ url_for('static',filename='js/main.js') }}"></script>
 </body>
 </html>
+
 
 
